--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts",
+    "start": "node --loader ts-node/esm src/index.ts",
     "dev": "nodemon src/index.ts",
     "docdev": "nodemon src/index.ts",
     "db:migrate": "sequelize-cli db:migrate",
